manifests/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: sample-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-app-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-app
        version: v1
    spec:
      containers:
      - name: sample-app
        image: morosawamikihito/blue-green-app:v1-blue
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-app-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-app
        version: v2
    spec:
      containers:
      - name: sample-app
        image: morosawamikihito/blue-green-app:v2-green
        imagePullPolicy: Always
        ports:
        - containerPort: 80
