manifests/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-app
spec:
  host: sample-app
  subsets:
  - name: sample-app-v1
    labels:
      version: v1
  - name: sample-app-v2
    labels:
      version: v2
